--- a/SCME.UI/CustomControl/DialogWindow.xaml
+++ b/SCME.UI/CustomControl/DialogWindow.xaml
@@ -1,49 +1,35 @@
 ﻿<Window x:Class="SCME.UI.CustomControl.DialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:res="clr-namespace:SCME.UI.Properties"
-        mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
-        Title="DialogWindow" Width="700" Height="400"
-        WindowStyle="None" ResizeMode="NoResize"
+        mc:Ignorable="d"
+        Title="DialogWindow"
+        WindowStyle="None"
+        ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         AllowsTransparency="True"
         Topmost="True"
+        Width="700" Height="400"
         Background="{StaticResource xGray2}"
-        BorderBrush="{StaticResource xBlue1}" BorderThickness="1">
-
+        BorderThickness="1"
+        BorderBrush="{StaticResource xBlue1}">
     <Grid Margin="20">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="60" />
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-
-        <Label Name="lblTitle" Margin="3" Grid.Row="0" Grid.ColumnSpan="2"
-               BorderBrush="{StaticResource xBlue1}" BorderThickness="0,0,0,1"
-               Style="{StaticResource CLabelBlackStyle}">
-            #Title
-        </Label>
-
-        <TextBox Name="tbMessage" Margin="3" Grid.Row="1" Grid.ColumnSpan="2"
-                 IsReadOnly="True" Background="Transparent" BorderBrush="Transparent"
-                 FontSize="{StaticResource FontSize28}" VerticalContentAlignment="Top"
-                 FontFamily="{StaticResource DefaultFontFamily}" TextWrapping="Wrap"
-                 VerticalScrollBarVisibility="Auto">
-            #Message
-        </TextBox>
-
+        <Label Name="lblTitle" Style="{StaticResource CLabelBlackStyle}" Content="#Title" Grid.Row="0" Grid.ColumnSpan="2" Margin="3" BorderThickness="0,0,0,1" BorderBrush="{StaticResource xBlue1}"/>
+        <TextBox Name="tbMessage" Text="#Message" TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="2" Margin="3" VerticalContentAlignment="Top" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" VerticalScrollBarVisibility="Auto" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource FontSize28}"/>
         <Grid Name="mainGrid" Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Name="btnOk" Grid.Column="0" IsDefault="True" Margin="2" Click="BtnOk_Click"
-                    Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Ok}" />
-            <Button Name="btnCancel" Grid.Column="1" IsCancel="True" Margin="2" Style="{StaticResource PrimaryButton}"
-                    Content="{x:Static res:Resources.Cancel}" />
+            <Button Name="btnOk" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Ok}" Grid.Column="0" Margin="2" IsDefault="True" Click="BtnOk_Click"/>
+            <Button Name="btnCancel" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Cancel}" Grid.Column="1" Margin="2" IsCancel="True"/>
         </Grid>
-
     </Grid>
 </Window>
