--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -1,53 +1,74 @@
 ﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.GateDataTemplate"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:gate="clr-namespace:SCME.Types.Gate;assembly=SCME.Types"
-             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=gate:TestParameters}"
-             d:DesignHeight="450" d:DesignWidth="800">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:gate="clr-namespace:SCME.Types.Gate;assembly=SCME.Types"
+      xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+      mc:Ignorable="d"
+      d:DataContext="{d:DesignInstance Type=gate:TestParameters}"
+      d:DesignWidth="800" d:DesignHeight="450">
     <Grid.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
+    </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="150" SharedSizeGroup="Column0b" />
-        <ColumnDefinition Width="220" SharedSizeGroup="Column1b"/>
-        <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="150" SharedSizeGroup="Column3b" />
-        <ColumnDefinition Width="220" SharedSizeGroup="Column4b"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="45" />
-            <RowDefinition Height="45" />
-            <RowDefinition Height="45" />
-            <RowDefinition Height="45" />
-        </Grid.RowDefinitions>
-    <CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
-    <CheckBox Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingCurrent}"  IsChecked="{Binding IsIhEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
-        <Label Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Content="{x:Static res:Resources.IHItm}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding IGT, StringFormat={}{0:N0}}" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" IsFloat="True" Grid.Row="1" Grid.Column="4" Margin="0,5" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <CheckBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.HoldingStrikeCurrent}" IsChecked="{Binding IsIhStrikeCurrentEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"/>
-    <CheckBox Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Content="{x:Static res:Resources.LatchingCurrent}" IsChecked="{Binding IsIlEnabled}" BorderBrush="#FFC9C9C9" Foreground="Black"  />
-    <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxResistance_Ohm}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding Resistance, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="3" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding VGT, StringFormat={}{0:N1}}" IsFloat="True" Grid.Row="3" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MinIgt_mA}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding MinIGT, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.MaxIgt_mA}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding IGT, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="4" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MaxIh_mA}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding IH, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-        <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MaxIl_mA}" Foreground="Black"/>
-    <customControls:ValidatingTextBox Text="{Binding IL, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="5" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+        <ColumnDefinition Width="Auto" MinWidth="170" SharedSizeGroup="Column0b"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column1b"/>
+        <ColumnDefinition Width="30"/>
+        <ColumnDefinition Width="Auto" MinWidth="160" SharedSizeGroup="Column3b"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column4b"/>
+    </Grid.ColumnDefinitions>
+    <CheckBox Content="{x:Static res:Resources.PureVgt}" IsChecked="{Binding IsCurrentEnabled}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <CheckBox Content="{x:Static res:Resources.HoldingCurrent}" IsChecked="{Binding IsIhEnabled}" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <Label Content="{x:Static res:Resources.IHItm}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding IGT, StringFormat={}{0:N0}}" IsNumeric="True" IsFloat="True" Grid.Row="1" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding IsIhEnabled, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <CheckBox Content="{x:Static res:Resources.HoldingStrikeCurrent}" IsChecked="{Binding IsIhStrikeCurrentEnabled}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <CheckBox Content="{x:Static res:Resources.LatchingCurrent}" IsChecked="{Binding IsIlEnabled}" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <CheckBox Content="{x:Static res:Resources.Vgnt}" IsChecked="{Binding UseVgnt}" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <Label Content="{x:Static res:Resources.CurrentLimit_mA}" Grid.Row="4" Grid.Column="0" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding CurrentLimit, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="4" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.VoltageLimitD_V}" Grid.Row="4" Grid.Column="3" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding VoltageLimitD, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="4" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.PlateTime_ms}" Grid.Row="5" Grid.Column="0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding PlateTime, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="5" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Rampup_Vms}" Grid.Row="5" Grid.Column="3" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding RampUpVoltage}" IsNumeric="True" Grid.Row="5" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.StartVoltage_V}" Grid.Row="6" Grid.Column="0" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" />
+    <customControls:ValidatingTextBox Text="{Binding StartVoltage}" IsNumeric="True" Grid.Row="6" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxResistance_Ohm}" Grid.Row="7" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding Resistance, StringFormat={}{0:N0}}" IsNumeric="True" Grid.Row="7" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxVgt_V}" Grid.Row="7" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding VGT, StringFormat={}{0:N1}}" IsFloat="True" Grid.Row="7" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MinIgt_mA}" Grid.Row="8" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding MinIGT, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="8" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxIgt_mA}" Grid.Row="8" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding IGT, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="8" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxIh_mA}" Grid.Row="9" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding IH, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="9" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxIl_mA}" Grid.Row="9" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding IL, StringFormat={}{0:N0}}" IsFloat="True" Grid.Row="9" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.GateLimitV}" Grid.Row="10" Grid.Column="0" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding GateLimitV}" IsNumeric="True" Grid.Row="10" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.GateLimitI}" Grid.Row="10" Grid.Column="3" Foreground="Black" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding GateLimitI}" IsNumeric="True" Grid.Row="10" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding UseVgnt, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
 </Grid>
