--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -1,66 +1,67 @@
 ﻿<Grid x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.VTMDataTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-      xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
       xmlns:vtm="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
       xmlns:wpfControlLibrary="clr-namespace:SCME.WpfControlLibrary"
-      mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=vtm:TestParameters}"
-      d:DesignHeight="450" d:DesignWidth="800">
+      xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+      xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
+      mc:Ignorable="d"
+      d:DataContext="{d:DesignInstance Type=vtm:TestParameters}"
+      d:DesignWidth="800" d:DesignHeight="450">
     <Grid.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml"/>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column0h" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column1h"/>
-        <ColumnDefinition Width="30" />
-        <ColumnDefinition Width="auto" SharedSizeGroup="Column3h" />
-        <ColumnDefinition Width="*" SharedSizeGroup="Column4h"/>
+        <ColumnDefinition Width="Auto" MinWidth="170" SharedSizeGroup="Column0h"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column1h"/>
+        <ColumnDefinition Width="30"/>
+        <ColumnDefinition Width="Auto" MinWidth="170" SharedSizeGroup="Column3h"/>
+        <ColumnDefinition Width="Auto" MinWidth="220" SharedSizeGroup="Column4h"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto"/>
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType,  ConverterParameter=0, Converter={StaticResource VT2V}}" />
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType, ConverterParameter=0, Converter={StaticResource VT2V}}" />
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType, ConverterParameter=0, Converter={StaticResource VT2V}}" />
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource VT2V}}" />
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource VT2V}}" />
         <wpfControlLibrary:RowDefinitionWithVisibility Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource VT2V}}" />
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Type}" />
-    <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource VtmTestTypes}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding TestType}" />
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Current_A}" />
-    <customControls:ValidatingTextBox Text="{Binding RampCurrent}" IsFloat="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:ValidatingTextBox Text="{Binding RampTime}" IsFloat="True" Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <CheckBox Foreground="Black" BorderBrush="#FFC9C9C9" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" IsChecked="{Binding IsRampOpeningEnabled}" Content="{x:Static res:Resources.IsHeatEnabled}" />
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <customControls:ValidatingTextBox Text="{Binding RampOpeningCurrent}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" IsFloat="True" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="4" Grid.Row="3" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-    <customControls:ValidatingTextBox Text="{Binding RampOpeningTime}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" IsFloat="True" Grid.Row="3" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Current_A}" />
-    <customControls:ValidatingTextBox Text="{Binding SinusCurrent}" IsFloat="True" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="3" Grid.Row="4" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:ValidatingTextBox Text="{Binding SinusTime}" IsFloat="True" Grid.Row="4" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Current_A}" />
-    <customControls:ValidatingTextBox Text="{Binding CurveCurrent}" IsFloat="True" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.Time_us}" />
-    <customControls:ValidatingTextBox Text="{Binding CurveTime}" IsFloat="True" Grid.Row="5" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.CurveFactor}" />
-    <customControls:ValidatingTextBox Text="{Binding CurveFactor}" IsFloat="True" Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="3" Grid.Row="6" Content="{x:Static res:Resources.AdditionalTime_us}" />
-    <customControls:ValidatingTextBox Text="{Binding CurveAddTime}" IsFloat="True" Grid.Row="6" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <CheckBox Foreground="Black" BorderBrush="#FFC9C9C9" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" IsChecked="{Binding UseFullScale}" Content="{x:Static res:Resources.UseFullScale}" /> 
-    <Label Foreground="Black" Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Count}" />
-    <customControls:ValidatingTextBox Text="{Binding Count}" IsFloat="True" Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-    <Label Foreground="Black" Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.MaxVtm_V}" />
-    <customControls:ValidatingTextBox Text="{Binding VTM, StringFormat={}{0:N2}}" IsFloat="True" Grid.Row="8" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Type}" Grid.Row="0" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <ComboBox ItemsSource="{Binding Source={StaticResource VtmTestTypes}}" SelectedValue="{Binding TestType}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0"/>
+    <Label Content="{x:Static res:Resources.Current_A}" Grid.Row="1" Grid.Column="0" Foreground="Black" Margin="0,5,0,0"/>
+    <customControls:ValidatingTextBox Text="{Binding RampCurrent}" IsNumeric="True" IsFloat="True" Grid.Row="1" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Time_us}" Grid.Row="1" Grid.Column="3" Foreground="Black" Margin="0,5,0,0"/>
+    <customControls:ValidatingTextBox Text="{Binding RampTime}" IsNumeric="True" IsFloat="True" Grid.Row="1" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <CheckBox Content="{x:Static res:Resources.IsHeatEnabled}" IsChecked="{Binding IsRampOpeningEnabled}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/>
+    <Label Content="{x:Static res:Resources.HeatCurrent_A}" Grid.Row="3" Grid.Column="0" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding RampOpeningCurrent}" IsNumeric="True" IsFloat="True" Grid.Row="3" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.HeatTime_us}" Grid.Row="3" Grid.Column="4" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}"/>
+    <customControls:ValidatingTextBox Text="{Binding RampOpeningTime}" IsNumeric="True" IsFloat="True" Grid.Row="3" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Current_A}" Grid.Row="4" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding SinusCurrent}" IsNumeric="True" IsFloat="True" Grid.Row="4" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Time_us}" Grid.Row="4" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding SinusTime}" IsNumeric="True" IsFloat="True" Grid.Row="4" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Current_A}" Grid.Row="5" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding CurveCurrent}" IsNumeric="True" IsFloat="True" Grid.Row="5" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.Time_us}" Grid.Row="5" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding CurveTime}" IsNumeric="True" IsFloat="True" Grid.Row="5" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.CurveFactor}" Grid.Row="6" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding CurveFactor}" IsNumeric="True" IsFloat="True" Grid.Row="6" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.AdditionalTime_us}" Grid.Row="6" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding CurveAddTime}" IsNumeric="True" IsFloat="True" Grid.Row="6" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <CheckBox Content="{x:Static res:Resources.UseFullScale}" IsChecked="{Binding UseFullScale}" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" BorderBrush="#FFC9C9C9" Foreground="Black"/> 
+    <Label Content="{x:Static res:Resources.Count}" Grid.Row="8" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding Count}" IsNumeric="True" IsFloat="True" Grid.Row="8" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+    <Label Content="{x:Static res:Resources.MaxVtm_V}" Grid.Row="8" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+    <customControls:ValidatingTextBox Text="{Binding VTM, StringFormat={}{0:N2}}" IsNumeric="True" IsFloat="True" Grid.Row="8" Grid.Column="4" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
 </Grid>
