--- a/SCME.UI/PagesTech/ATUPage.xaml
+++ b/SCME.UI/PagesTech/ATUPage.xaml
@@ -1,136 +1,107 @@
 ﻿<Page x:Class="SCME.UI.PagesTech.ATUPage"
+      x:Name="aTUPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:dynamicDataDisplay="http://research.microsoft.com/DynamicDataDisplay/1.0"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:ui="clr-namespace:SCME.UI"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:customControls="WpfControlLibrary"
-      mc:Ignorable="d" x:Name="aTUPage"
+      mc:Ignorable="d" 
       d:DesignWidth="1280" d:DesignHeight="924"
       Title="{x:Static res:Resources.ATU}">
-
     <Page.Resources>
-        <ui:EnumValueToString x:Key="EnumToString" />
-
+        <ui:EnumValueToString x:Key="EnumToString"/>
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
-            <Setter Property="Padding" Value="5" />
-            <Setter Property="Margin" Value="10,10,7,10"></Setter>
+            <Setter Property="Margin" Value="10,10,7,10"/>
+            <Setter Property="Padding" Value="5"/>
         </Style>
-
         <Style TargetType="customControls:ValidatingTextBox" BasedOn="{StaticResource {x:Type customControls:ValidatingTextBox}}">
-            <Setter Property="Margin" Value="10,10,7,10"></Setter>
-            <Setter Property="VerticalAlignment" Value="Center"></Setter>
-            <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
+            <Setter Property="Margin" Value="10,10,7,10"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Right"/>
         </Style>
-
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
-        </Style>
-
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}"/>
     </Page.Resources>
-
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="90*" />
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Column="3" Grid.Row="0" Margin="10,0,0,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <dynamicDataDisplay:ChartPlotter x:Name="chartPlotter" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,0,10,20" BorderBrush="Transparent" Background="Transparent" Foreground="{StaticResource xBlack1}">
+            <dynamicDataDisplay:HorizontalAxisTitle Content="{x:Static res:Resources.Graph_TimeUs}"/>
+            <dynamicDataDisplay:VerticalAxisTitle Content="{x:Static res:Resources.Graph_VI}"/>
+            <dynamicDataDisplay:AxisGrid Visibility="Hidden"/>
+        </dynamicDataDisplay:ChartPlotter>
+        <Border x:Name="borderParameters" Grid.Row="0" Grid.Column="3" Margin="0,0,5,0">
             <Grid >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="200" />
-                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.AtuPrePulseValue}" HorizontalAlignment="Left" />
-                <customControls:ValidatingTextBox x:Name="lbAtuPrePulseValue" Grid.Column="1" Grid.Row="0"   IsNumeric="True" Minimum="{StaticResource MinPrePulseValue_ATU}" Maximum="{StaticResource MaxPrePulseValue_ATU}" Text="{Binding Parameters.PrePulseValue, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" />
-
-                <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.AtuPowerValueSet}"  HorizontalAlignment="Left"/>
-                <customControls:ValidatingTextBox x:Name="lbAtuPowerValue" Grid.Column="1" Grid.Row="1"   IsNumeric="True" IsFloat="True" Minimum="{StaticResource MinPowerValue_ATU}" Maximum="{StaticResource MaxPowerValue_ATU}" Text="{Binding Parameters.PowerValue, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" />
-
-                <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.AtuUBR}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="2" Content="0" x:Name="lbAtuUBR" FontSize="{StaticResource FontSize26}"  Height="Auto" HorizontalContentAlignment="Right" />
-
-                <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.AtuUPRSM}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="3" Content="0" x:Name="lbAtuUPRSM" FontSize="{StaticResource FontSize26}"  Height="Auto" HorizontalContentAlignment="Right" />
-
-                <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.AtuIPRSM}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="4" Content="0" x:Name="lbAtuIPRSM" FontSize="{StaticResource FontSize26}"  Height="Auto" HorizontalContentAlignment="Right" />
-
-                <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.AtuPRSM}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="5" Content="0" x:Name="lbAtuPRSM" FontSize="{StaticResource FontSize26}"  Height="Auto" HorizontalContentAlignment="Right" />
-
-                <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="0" Grid.Row="6"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="6"   IsNumeric="True" Minimum="{StaticResource MinHeightCS}" Maximum="{StaticResource MaxHeightCS}" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Text="{Binding ClampParameters.Height, ElementName=aTUPage}" />
-
-                <Label Content="{x:Static res:Resources.Temp}"  Grid.Column="0"  Grid.Row="7"  HorizontalAlignment="Left"/>
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="7"   IsNumeric="True" Minimum="{StaticResource MinTempCS}" Maximum="{StaticResource MaxTempCS}" Text="{Binding Temperature, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" />
-
-                <Label Content="{x:Static res:Resources.Force}"  Grid.Column="0"  Grid.Row="8"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" />
-                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8"    IsNumeric="True"   Maximum="{StaticResource MaxForceCS}" Minimum="{StaticResource MinForceCS}" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Text="{Binding ClampParameters.CustomForce, ElementName=aTUPage}" />
-
-                <Label Grid.Column="0" x:Name="lblTitleTop" Grid.Row="9" Content="{Binding Source={StaticResource TopTempName}}"  HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
-                <Label Grid.Column="1" Grid.Row="9" Content="0" x:Name="TopTempLabel"  Background="LightGreen"  HorizontalContentAlignment="Right" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
-
-                <Label Grid.Column="0" x:Name="lblTitleBot" Grid.Row="10" Content="{Binding Source={StaticResource BottomTempName}}"  HorizontalAlignment="Left"/>
-                <Label Grid.Column="1" Grid.Row="10" Content="0" x:Name="BotTempLabel"  Background="LightGreen" HorizontalContentAlignment="Right"  />
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="320"/>
+                    <ColumnDefinition Width="*" MinWidth="150"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="{x:Static res:Resources.AtuPrePulseValue}" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left"/>
+                <customControls:ValidatingTextBox x:Name="lbAtuPrePulseValue" Text="{Binding Parameters.PrePulseValue, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" IsNumeric="True" Minimum="{StaticResource MinPrePulseValue_ATU}" Maximum="{StaticResource MaxPrePulseValue_ATU}" Grid.Row="0" Grid.Column="1" Padding="5"/>
+                <Label Content="{x:Static res:Resources.AtuPowerValueSet}" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"/>
+                <customControls:ValidatingTextBox x:Name="lbAtuPowerValue" Text="{Binding Parameters.PowerValue, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" IsNumeric="True" IsFloat="True" Minimum="{StaticResource MinPowerValue_ATU}" Maximum="{StaticResource MaxPowerValue_ATU}" Padding="5"/>
+                <Label Content="{x:Static res:Resources.AtuUBR}" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="lbAtuUBR" Content="0" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
+                <Label Content="{x:Static res:Resources.AtuUPRSM}" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="lbAtuUPRSM" Content="0" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
+                <Label Content="{x:Static res:Resources.AtuIPRSM}"  Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="lbAtuIPRSM" Content="0" Grid.Row="4" Grid.Column="1" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
+                <Label Content="{x:Static res:Resources.AtuPRSM}" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="lbAtuPRSM" Content="0" Grid.Row="5" Grid.Column="1" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
+                <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
+                <customControls:ValidatingTextBox Text="{Binding ClampParameters.Height, ElementName=aTUPage}" IsNumeric="True" Minimum="{StaticResource MinHeightCS}" Maximum="{StaticResource MaxHeightCS}" Grid.Row="6" Grid.Column="1" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Padding="5"/>
+                <Label Content="{x:Static res:Resources.Temp}" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Left"/>
+                <customControls:ValidatingTextBox Text="{Binding Temperature, ElementName=aTUPage, UpdateSourceTrigger=PropertyChanged}" IsNumeric="True" Minimum="{StaticResource MinTempCS}" Maximum="{StaticResource MaxTempCS}" Grid.Row="7" Grid.Column="1" Padding="5"/>
+                <Label Content="{x:Static res:Resources.Force}" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
+                <customControls:ValidatingTextBox Text="{Binding ClampParameters.CustomForce, ElementName=aTUPage}" IsNumeric="True" Minimum="{StaticResource MinForceCS}" Maximum="{StaticResource MaxForceCS}" Grid.Row="8" Grid.Column="1" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Padding="5"/>
+                <Label x:Name="lblTitleTop" Content="{Binding Source={StaticResource TopTempName}}" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
+                <Label x:Name="TopTempLabel" Content="0" Grid.Row="9" Grid.Column="1" HorizontalContentAlignment="Right" Background="LightGreen" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
+                <Label x:Name="lblTitleBot" Content="{Binding Source={StaticResource BottomTempName}}" Grid.Row="10" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="BotTempLabel" Content="0" Grid.Row="10" Grid.Column="1" HorizontalContentAlignment="Right" Background="LightGreen"/>
+                <Label x:Name="lbAtuFaultReason" Content="Fault" Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Background="Tomato"/>
+                <Label x:Name="lbAtuWarning" Content="Warning" Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Background="Gold"/>
             </Grid>
         </Border>
-
-        <Grid Grid.Row="2" Grid.ColumnSpan="4" Margin="0,0,-10,0">
+        <Line StrokeThickness="1" Stroke="{StaticResource xBlue1}" X1="0" Y1="0" X2="0" Y2="{Binding ActualHeight, ElementName=borderParameters}" Grid.Row="0" Grid.Column="3" Margin="0,20" HorizontalAlignment="Left"/>
+        <Grid Grid.Row="1" Grid.ColumnSpan="4" Margin="0,0,-10,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Back}" x:Name="btnBack" Click="btnBack_OnClick" />
-            <Button Grid.Column="2" VerticalAlignment="Bottom" Content="{x:Static res:Resources.SetTemp}" x:Name="btnTemperature" Click="btnTemperature_OnClick"/>
-            <Button Grid.Column="4" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Stop}" Background="{StaticResource xRed1}" Click="btnStop_OnClick" />
-            <Button Grid.Column="6" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Start}" Background="{StaticResource xGreen1}" x:Name="btnStart" Click="btnStart_OnClick"/>
+            <Button x:Name="btnBack" Content="{x:Static res:Resources.Back}" Grid.Column="0" VerticalAlignment="Bottom" Click="btnBack_OnClick"/>
+            <Button x:Name="btnTemperature" Content="{x:Static res:Resources.SetTemp}" Grid.Column="2" VerticalAlignment="Bottom" Click="btnTemperature_OnClick"/>
+            <Button Content="{x:Static res:Resources.Stop}" Grid.Column="4" VerticalAlignment="Bottom" Background="{StaticResource xRed1}" Click="btnStop_OnClick" />
+            <Button x:Name="btnStart" Content="{x:Static res:Resources.Start}" Grid.Column="6" VerticalAlignment="Bottom"  Background="{StaticResource xGreen1}" Click="btnStart_OnClick"/>
         </Grid>
-        
-
-        <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" Margin="10,0,0,0">
-            <Grid >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50*" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="18*" />
-                </Grid.RowDefinitions>
-                <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" x:Name="lbAtuFaultReason" Content="FaultReason" FontSize="{StaticResource FontSize26}" Background="Tomato" />
-                <Label Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" x:Name="lbAtuWarning" Content="Warning" FontSize="{StaticResource FontSize26}" Background="Gold" />
-            </Grid>
-        </Border>
-        
     </Grid>
-
 </Page>
