--- a/SCME.UI/PagesTech/DVdtPage.xaml
+++ b/SCME.UI/PagesTech/DVdtPage.xaml
@@ -12,8 +12,8 @@
       d:DesignWidth="1280" d:DesignHeight="924"
       Title="{x:Static res:Resources.dVdt}">
     <Page.Resources>
-        <ui:BooleanToVisibilityConverter x:Key="B2V" />
-        <ui:EnumValueToString x:Key="E2S" />
+        <ui:BooleanToVisibilityConverter x:Key="B2V"/>
+        <ui:EnumValueToString x:Key="E2S"/>
         <ui:DvdtTestTypeToVisibilityConverter x:Key="DT2V"/>
         <ui:DvdtTestTypeToVisibilityUnConverter x:Key="DT2VB"/>
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Type Label}}">
@@ -99,11 +99,11 @@
                 <customControls:ValidatingTextBox Text="{Binding Temperature, ElementName=dVdtPage}" IsNumeric="True" Minimum="{StaticResource MinTempCS}" Maximum="{StaticResource MaxTempCS}" TextAlignment="Right" Grid.Row="7" Grid.Column="1" Padding="5"/>
                 <Label Content="{x:Static res:Resources.Force}" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityHeightForce}}"/>
                 <customControls:ValidatingTextBox Text="{Binding ClampParameters.CustomForce, ElementName=dVdtPage}" IsNumeric="True"  Minimum="{StaticResource MinForceCS}" Maximum="{StaticResource MaxForceCS}" TextAlignment="Right" Grid.Row="8" Grid.Column="1"  Visibility="{Binding Source={StaticResource VisibilityHeightForce}}" Padding="5"/>
-                <Label x:Name="lblTitleTop" Content="{Binding Source={StaticResource TopTempName}}" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
+                <Label x:Name="lblTitleTop" Content="{x:Static res:Resources.TopTempName}" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}"/>
                 <Label x:Name="TopTempLabel" Content="0" Grid.Row="9" Grid.Column="1" Background="LightGreen" Visibility="{Binding Source={StaticResource VisibilityTopTemp}}" Padding="0,0,10,0"/>
-                <Label x:Name="lblTitleBot" Content="{Binding Source={StaticResource BottomTempName}}" Grid.Row="10" Grid.Column="0" HorizontalAlignment="Left"/>
+                <Label x:Name="lblTitleBot" Content="{x:Static res:Resources.BotTempName}" Grid.Row="10" Grid.Column="0" HorizontalAlignment="Left"/>
                 <Label x:Name="BotTempLabel" Content="0" Grid.Row="10" Grid.Column="1" Background="LightGreen" Padding="0,0,10,0"/>
-                <Label Content="Результат" Grid.Column="0"  Grid.Row="11" HorizontalAlignment="Left"  />
+                <Label Content="{x:Static res:Resources.Results}" Grid.Column="0" Grid.Row="11" HorizontalAlignment="Left"  />
                 <Label x:Name="labelResult" Grid.Row="11" Grid.Column="1" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
                 <Label Content="{x:Static res:Resources.DvdtVoltageRate}" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" Visibility="{Binding Parameters.Mode, ElementName=dVdtPage, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Label Name="labelVoltageRate" Grid.Row="12" Grid.Column="1" HorizontalContentAlignment="Right" Visibility="{Binding Parameters.Mode, ElementName=dVdtPage, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="{StaticResource FontSize26}"/>
