--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -1,189 +1,144 @@
 ﻿<Page x:Class="SCME.UI.PagesTech.TechnicianPage"
+      x:Name="technicianPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:my="clr-namespace:SCME.UI"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
-      mc:Ignorable="d" Loaded="TechnicianPage_OnLoaded"
+      mc:Ignorable="d" 
       d:DesignWidth="1280" d:DesignHeight="924"
-      Name="technicianPage" Title="{x:Static res:Resources.Technitian}">
-
+      Title="{x:Static res:Resources.Technician}"
+      Loaded="TechnicianPage_OnLoaded">
     <Page.Resources>
-        <my:BooleanToVisibilityConverter x:Key="B2V" />
-        <my:TryBooleanToVisibilityConverter x:Key="BooleanToVisibility" />
-        <x:StaticExtension Member="my:Cache.Main" x:Key="Main"/>
-
-
+        <my:BooleanToVisibilityConverter x:Key="B2V"/>
+        <my:TryBooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+        <x:StaticExtension x:Key="Main" Member="my:Cache.Main"/>
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
-            <Setter Property="Foreground" Value="{StaticResource xWhite1}" />
-            <Setter Property="Margin" Value="10" />
-            <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
-            <Setter Property="HorizontalAlignment" Value="Right" />
-            <Setter Property="VerticalAlignment" Value="Bottom" />
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="Foreground" Value="{StaticResource xWhite1}"/>
+            <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}"/>
         </Style>
-
         <Style TargetType="{x:Type Path}">
-            <Setter Property="Stroke" Value="{StaticResource xWhite1}" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="StrokeThickness" Value="3"/>
+            <Setter Property="Stroke" Value="{StaticResource xWhite1}"/>
             <Setter Property="Margin" Value="20" />
-            <Setter Property="Width" Value="80" />
-            <Setter Property="Height" Value="80" />
-            <Setter Property="Stretch" Value="Uniform" />
-            <Setter Property="StrokeThickness" Value="3" />
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Height" Value="80"/>
+            <Setter Property="Stretch" Value="Uniform"/>
         </Style>
-
         <Style TargetType="{x:Type Button}">
-            <Setter Property="OverridesDefaultStyle" Value="True" />
-            <Setter Property="Opacity" Value="1" />
-            <Setter Property="Margin" Value="5" />
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Opacity" Value="1"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Opacity" Value="0.3" />
+                                <Setter Property="Opacity" Value="0.3"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="Opacity" Value="0.7" />
+                                <Setter Property="Opacity" Value="0.7"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
-                        <ContentPresenter />
+                        <ContentPresenter/>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <EventSetter Event="Click" Handler="Button_Click" />
+            <EventSetter Event="Click" Handler="Button_Click"/>
         </Style>
-
     </Page.Resources>
-
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="90*" />
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
-
-        
-       <UniformGrid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Columns="3" Margin="80,20">
-           <Button CommandParameter="1" Name="btnGate"
-                   Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=GateIsVisible, Converter={StaticResource B2V}}">
-               <Grid Background="{StaticResource xOrange2}">
-                   <Path Data="{StaticResource GatePath}" />
-                   <Label Content="{x:Static res:Resources.Gate}" />
-               </Grid>
-           </Button>
-           
-           <Button CommandParameter="2" Name="btnVtm"
-                   Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=SLIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xRed1}">
-                        <Path Data="{StaticResource VtmPath}" />
-                        <Label Content="{x:Static res:Resources.Vtm}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="3" Name="btnBvt"
-                    Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=BvtIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xBlue2}">
-                        <Path Data="{StaticResource BvtPath}" />
-                        <Label Content="{x:Static res:Resources.Bvt}" />
-                    </Grid>
-                </Button>
-           
-           
-
-
-                <Button CommandParameter="6">
-                    <Grid Background="{StaticResource xOrange1}">
-                        <Path Data="{StaticResource ConsolePath}" />
-                        <Label Content="{x:Static res:Resources.Console}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="7" ToolTipService.ShowOnDisabled="{Binding Source={StaticResource Main}, Path=VM.IsCentral}"
-                        IsEnabled="{Binding Source={StaticResource Main}, Path=VM.IsLocal}"
-                        ToolTipService.ToolTip="{x:Static res:Resources.ProfilePageToolTip}"
-                    >
-                    <Grid Background="{StaticResource xPurple1}">
-                        <Path Data="{StaticResource EditPath}" />
-                        <Label Content="{x:Static res:Resources.Profiles}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="9">
-                    <Grid Background="{StaticResource xGreen2}">
-                        <Path Data="{StaticResource ResultsPath}" />
-                        <Label Content="{x:Static res:Resources.Results}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="10">
-                    <Grid Background="{StaticResource xBlue3}">
-                        <Path Data="{StaticResource TechPath}" />
-                        <Label Content="{x:Static res:Resources.Hardware}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="11"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xOrange1}">
-                        <Path Data="{StaticResource ClampPath}" />
-                        <Label Content="{x:Static res:Resources.Clamp}" />
-                    </Grid>
-                </Button>
-                <Button CommandParameter="12" Name="btndVdt"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=dVdtIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xBlue2}">
-                        <Path Data="{StaticResource CurvePath}" />
-                        <Label Content="{x:Static res:Resources.dVdt}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="13" Name="btnATU"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ATUIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xGreen4}">
-                        <Path Data="{StaticResource ATUPath}" />
-                        <Label Content="{x:Static res:Resources.ATU}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="14" Name="btnQrrTq"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=QrrTqIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xGreen1}">
-                        <Path Data="{StaticResource QrrTqPath}" />
-                        <Label Content="{x:Static res:Resources.QrrTq}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="16" Name="btnIH"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=IHIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xRed1}">
-                        <Path Data="" />
-                        <Label Content="{x:Static res:Resources.IH}" />
-                    </Grid>
-                </Button>
-
-                <Button CommandParameter="17" Name="btnTOU"
-                Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TOUIsVisible, Converter={StaticResource B2V}}">
-                    <Grid Background="{StaticResource xGreen2}">
-                        <Path Data="{StaticResource TOUPath}" />
-                        <Label Content="{x:Static res:Resources.TOU}" />
-                    </Grid>
-                </Button>
-
-            </UniformGrid>
-       
-        <Button Grid.Column="0" Grid.Row="1"
-                Content="{x:Static res:Resources.Back}"
-                Click="BtnBack_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"
-              
-                Style="{StaticResource BackButton}" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <UniformGrid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Columns="3" Margin="80,20">
+            <Button x:Name="btnGTU" CommandParameter="1" Visibility="{Binding GateIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xOrange2}">
+                    <Path Data="{StaticResource GatePath}"/>
+                    <Label Content="{x:Static res:Resources.Gate}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btnSL" CommandParameter="2" Visibility="{Binding SLIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xRed1}">
+                    <Path Data="{StaticResource VtmPath}"/>
+                    <Label Content="{x:Static res:Resources.Vtm}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btnBVT" CommandParameter="3" Visibility="{Binding BvtIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xBlue2}">
+                    <Path Data="{StaticResource BvtPath}"/>
+                    <Label Content="{x:Static res:Resources.Bvt}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="6">
+                <Grid Background="{StaticResource xOrange1}">
+                    <Path Data="{StaticResource ConsolePath}"/>
+                    <Label Content="{x:Static res:Resources.Console}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="7" IsEnabled="{Binding VM.IsLocal, Source={StaticResource Main}}" ToolTip="{x:Static res:Resources.ProfilePageToolTip}" ToolTipService.ShowOnDisabled="{Binding VM.IsCentral, Source={StaticResource Main}}">
+                <Grid Background="{StaticResource xPurple1}">
+                    <Path Data="{StaticResource EditPath}"/>
+                    <Label Content="{x:Static res:Resources.Profiles}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="9">
+                <Grid Background="{StaticResource xGreen2}">
+                    <Path Data="{StaticResource ResultsPath}"/>
+                    <Label Content="{x:Static res:Resources.Results}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="10">
+                <Grid Background="{StaticResource xBlue3}">
+                    <Path Data="{StaticResource TechPath}"/>
+                    <Label Content="{x:Static res:Resources.Hardware}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="11" Visibility="{Binding ClampIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xOrange1}">
+                    <Path Data="{StaticResource ClampPath}"/>
+                    <Label Content="{x:Static res:Resources.Clamp}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btndUdt" CommandParameter="12" Visibility="{Binding dVdtIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xBlue2}">
+                    <Path Data="{StaticResource CurvePath}"/>
+                    <Label Content="{x:Static res:Resources.dVdt}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btnATU" CommandParameter="13" Visibility="{Binding ATUIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xGreen4}">
+                    <Path Data="{StaticResource ATUPath}"/>
+                    <Label Content="{x:Static res:Resources.ATU}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btnQrrTq" CommandParameter="14" Visibility="{Binding QrrTqIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xGreen1}">
+                    <Path Data="{StaticResource QrrTqPath}"/>
+                    <Label Content="{x:Static res:Resources.QrrTq}"/>
+                </Grid>
+            </Button>
+            <Button x:Name="btnTOU" CommandParameter="17" Visibility="{Binding TOUIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xGreen2}">
+                    <Path Data="{StaticResource TOUPath}"/>
+                    <Label Content="{x:Static res:Resources.TOU}"/>
+                </Grid>
+            </Button>
+        </UniformGrid>
+        <Button Style="{StaticResource BackButton}" Content="{x:Static res:Resources.Back}" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="BtnBack_Click"/>
     </Grid>
 </Page>
