--- a/SCME.UI/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.UI/CustomControl/ListBoxTestParameters.xaml
@@ -4,7 +4,7 @@
              xmlns:res="clr-namespace:SCME.UI.Properties"
              xmlns:ui="clr-namespace:SCME.UI" 
              xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
-             xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types" 
+             xmlns:gateParameters="clr-namespace:SCME.Types.GTU;assembly=SCME.Types" 
              xmlns:bvtParameters="clr-namespace:SCME.Types.BVT;assembly=SCME.Types" 
              xmlns:vtmParameters="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
              xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
