--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -10,7 +10,7 @@
       mc:Ignorable="d" 
       d:DesignWidth="1280" d:DesignHeight="924"
       Title="{x:Static res:Resources.Technician}"
-      Loaded="TechnicianPage_OnLoaded">
+      Loaded="TechnicianPage_Loaded">
     <Page.Resources>
         <my:BooleanToVisibilityConverter x:Key="B2V"/>
         <my:TryBooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
@@ -65,7 +65,13 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <UniformGrid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Columns="3" Margin="80,20">
+        <UniformGrid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Columns="4" Margin="80,20">
+            <Button CommandParameter="11" Visibility="{Binding ClampIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+                <Grid Background="{StaticResource xOrange1}">
+                    <Path Data="{StaticResource ClampPath}"/>
+                    <Label Content="{x:Static res:Resources.Clamp}"/>
+                </Grid>
+            </Button>
             <Button x:Name="btnGTU" CommandParameter="1" Visibility="{Binding GateIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
                 <Grid Background="{StaticResource xOrange2}">
                     <Path Data="{StaticResource GatePath}"/>
@@ -84,37 +90,7 @@
                     <Label Content="{x:Static res:Resources.Bvt}"/>
                 </Grid>
             </Button>
-            <Button CommandParameter="6">
-                <Grid Background="{StaticResource xOrange1}">
-                    <Path Data="{StaticResource ConsolePath}"/>
-                    <Label Content="{x:Static res:Resources.Console}"/>
-                </Grid>
-            </Button>
-            <Button CommandParameter="7" IsEnabled="{Binding VM.IsLocal, Source={StaticResource Main}}" ToolTip="{x:Static res:Resources.ProfilePageToolTip}" ToolTipService.ShowOnDisabled="{Binding VM.IsCentral, Source={StaticResource Main}}">
-                <Grid Background="{StaticResource xPurple1}">
-                    <Path Data="{StaticResource EditPath}"/>
-                    <Label Content="{x:Static res:Resources.Profiles}"/>
-                </Grid>
-            </Button>
-            <Button CommandParameter="9">
-                <Grid Background="{StaticResource xGreen2}">
-                    <Path Data="{StaticResource ResultsPath}"/>
-                    <Label Content="{x:Static res:Resources.Results}"/>
-                </Grid>
-            </Button>
-            <Button CommandParameter="10">
-                <Grid Background="{StaticResource xBlue3}">
-                    <Path Data="{StaticResource TechPath}"/>
-                    <Label Content="{x:Static res:Resources.Hardware}"/>
-                </Grid>
-            </Button>
-            <Button CommandParameter="11" Visibility="{Binding ClampIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
-                <Grid Background="{StaticResource xOrange1}">
-                    <Path Data="{StaticResource ClampPath}"/>
-                    <Label Content="{x:Static res:Resources.Clamp}"/>
-                </Grid>
-            </Button>
-            <Button x:Name="btndUdt" CommandParameter="12" Visibility="{Binding dVdtIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
+            <Button x:Name="btndVdt" CommandParameter="12" Visibility="{Binding dVdtIsVisible, Source={x:Static uiServiceConfig:Settings.Default}, Converter={StaticResource B2V}}">
                 <Grid Background="{StaticResource xBlue2}">
                     <Path Data="{StaticResource CurvePath}"/>
                     <Label Content="{x:Static res:Resources.dVdt}"/>
@@ -136,6 +112,36 @@
                 <Grid Background="{StaticResource xGreen2}">
                     <Path Data="{StaticResource TOUPath}"/>
                     <Label Content="{x:Static res:Resources.TOU}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="10">
+                <Grid Background="{StaticResource xBlue3}">
+                    <Path Data="{StaticResource TechPath}"/>
+                    <Label Content="{x:Static res:Resources.Hardware}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="4">
+                <Grid Background="{StaticResource xBlue2}">
+                    <Path Data="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
+                    <Label Content="{x:Static res:Resources.Settings}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="6">
+                <Grid Background="{StaticResource xOrange1}">
+                    <Path Data="{StaticResource ConsolePath}"/>
+                    <Label Content="{x:Static res:Resources.Console}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="7" IsEnabled="{Binding VM.IsLocal, Source={StaticResource Main}}" ToolTip="{x:Static res:Resources.ProfilePageToolTip}" ToolTipService.ShowOnDisabled="{Binding VM.IsCentral, Source={StaticResource Main}}">
+                <Grid Background="{StaticResource xPurple1}">
+                    <Path Data="{StaticResource EditPath}"/>
+                    <Label Content="{x:Static res:Resources.Profiles}"/>
+                </Grid>
+            </Button>
+            <Button CommandParameter="9">
+                <Grid Background="{StaticResource xGreen2}">
+                    <Path Data="{StaticResource ResultsPath}"/>
+                    <Label Content="{x:Static res:Resources.Results}"/>
                 </Grid>
             </Button>
         </UniformGrid>
